Gradle 7.5 -> 8.14.3, Kotlin 1.6.21 -> 2.1.10, Armeria 1.17.0 -> 1.32.5, update to IntelliJ Platform plugin 2.6.0, and adopt Java 21.